wip: Javac in separate process
Externalize Javac into separate Java process for setting JMS directives